[package]
name = "udcn-quic"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util"] }
quinn = { version = "0.11", features = ["runtime-tokio", "rustls"] }
serde_json = "1.0"
udcn-common = { path = "../udcn-common" }

[lib]
path = "src/lib.rs"

